<resources>
    <string name="app_name">eventapp</string>
    <string name="todo2">do</string>
    <string name="powered_by">by</string>
    <string name="todo">im1</string>
    <string name="by">Powered By</string>
    <string name="verify">verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_not_received">OTP Not Received?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="as">*</string>
    <string name="_0">0</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="i1">1</string>
    <string name="i2">2</string>
    <string name="i3">3</string>
    <string name="i4">4</string>
    <string name="i5">5</string>
    <string name="i6">6</string>
    <string name="empty" />
    <string name="star">*</string>
</resources>